--- a/Secure Mobile Communication/res/values/strings.xml
+++ b/Secure Mobile Communication/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="confidential">confidential</string>
     <string name="send">Send</string>
     <string name="message">Message</string>
+    <string name="phone_hint">Your phone number</string>
 
 </resources>
