--- a/Secure Mobile Communication/res/values/strings.xml
+++ b/Secure Mobile Communication/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ECC</string>
+    <string name="app_name">Secure Mobile Communication</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="gen_key_button">Generate Keys</string>
